new proj/src/objects/GE_DS_Daily_Time_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GE_DS_Bonus_Amount__c</fullName>
        <formula>IF (  ISPICKVAL(GE_DS_Technician__r.GE_OG_DS_Bonus_Rate_Type__c,&apos;Daily&apos;),  GE_DS_Bonus_Day__c * GE_DS_Bonus_Rate__c , GE_DS_Bonus_Rate__c *   GE_DS_Bonus_Hours__c   ) + GE_DS_Premium_Holiday_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_DS_Bonus_Day__c</fullName>
        <label>Bonus Day</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Bonus_Hours__c</fullName>
        <label>Bonus Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Bonus_Rate__c</fullName>
        <label>Bonus Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_DS_CDB_Type__c</fullName>
        <label>CDB Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_DS_Has_SFDC_User__c</fullName>
        <formula>NOT(ISBLANK( GE_DS_Technician__r.SVMXC__Salesforce_User__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has SFDC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_DS_Premium_Holiday_Bonus__c</fullName>
        <label>Premium/Holiday Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_DS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Daily Time Summaries</relationshipLabel>
        <relationshipName>Daily_Time_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DS_Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>SVMXC_Timesheet__c</referenceTo>
        <relationshipLabel>Daily Time Summaries</relationshipLabel>
        <relationshipName>Daily_Time_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_Billable_Day__c</fullName>
        <label>Total Billable Day</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_Billable_Work_Order_Time__c</fullName>
        <label>Total Billable Work Order Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_CDB_Day__c</fullName>
        <label>Total CDB Day</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_CDB_Time__c</fullName>
        <label>Total CDB Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_Non_Billable_Day__c</fullName>
        <label>Total Non-Billable Day</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_Non_Billable_Work_Order_Time__c</fullName>
        <label>Total Non-Billable Work Order Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Order_Number__c</fullName>
        <formula>GE_DS_Work_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Daily Time Summaries</relationshipLabel>
        <relationshipName>Daily_Time_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Daily Time Summary</label>
    <nameField>
        <displayFormat>DTS-{0000000000}</displayFormat>
        <label>Daily Time Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Time Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>